--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowLeilaoComponent.razor
@@ -32,7 +32,7 @@
 	{
 		<button class="buttonA buttonTable1" @onclick="Licitar">Licitar</button>
 	}
-	<button class="buttonA buttonTable2" @onclick="Voltar">Voltar</button>
+	<button class="buttonA" @onclick="Voltar">Voltar</button>
 </div>
 
 @code 
