--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/FormLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/FormLeilaoComponent.razor
@@ -8,6 +8,10 @@
 
 <div>
 	<h2>Formulário Leilão</h2>
+	@if(erro != 0)
+	{
+		<WarningComponent mensagem="@codigosErro[erro]" sucess ="false" page="14"/>
+	}
 	<div>
 		<label><b>Quantidade a leiloar</b></label>
 		<input type="text" class="tb" id="quantidade" name="quantidade" placeholder="Insira a quantidade a vender" @bind-value="quantidade" />
@@ -18,7 +22,7 @@
 		<label><b>Valor mínimo</b></label>
 		<input type="text" class="tb" id="valormin" name="valormin" @bind-value="valorMin" />
 		<br />
-		<label><b>Data Limite</b></label>
+		<label><b>Data Limite (DD-MM-AAAA)</b></label>
 		<input type="text" class="tb" id="date" name="date" @bind-value="date" />
 	</div>
 	<br />
@@ -46,7 +50,7 @@
 	<br />
 	<div>
 		<button class="buttonA buttonTable1" @onclick="CriarLeilao">Criar Leilão</button>
-		<button class="buttonA buttonTable2" @onclick="Retroceder">Retroceder</button>
+		<button class="buttonA" @onclick="Retroceder">Retroceder</button>
 	</div>
 </div>
 @code 
@@ -61,22 +65,52 @@
 	private string date = "";
 	private Table<Produto> tabelContent;
 	private int lp = -1;
+	private int erro = 0;
+	private Dictionary<int, string> codigosErro = new Dictionary<int, string>();
+	private static FormLeilaoComponent component;
 	protected override void OnInitialized()
 	{
+		component = this;
+		codigosErro[1] = "Data no formato errado";
+		codigosErro[2] = "Produto não selecionado";
+		codigosErro[3] = "Quantidade e valores tem que ser positivos";
 		Stand stand = facade.GetStand(idStand);
 		List<Produto> conteudo = stand.Produtos;
 		this.tabelContent = new Table<Produto>(conteudo);
 	}
+	public static FormLeilaoComponent GetInstance()
+	{
+		return component;
+	}
+	public void CleanWarning()
+	{
+		erro = 0;
+		StateHasChanged();
+	}
 	private void CriarLeilao()
 	{
 		DateTime param;
-		if(DateTime.TryParse(date, out param))
+		if (date.Count(c => (c == '-')) != 2 || !DateTime.TryParse(date, out param))
+		{
+			this.date = "";
+			this.erro = 1;
+		}
+		else if(!tabelContent.IdValid())
+		{
+			this.erro = 2;
+		}
+		else if(quantidade <= 0 || valorMax < 0 || valorMin < 0)
+		{
+			this.erro = 3;
+		}
+		else
 		{
 			Produto p = tabelContent.GetElement();
 			Leilao l = new Leilao(0, param, valorMin, valorMax != 0 ? valorMax : null, p.IdProduto, p.Stand, idStand, idFeira, 0);
 			facade.AddLeilao(l);
-			ShowLeiloesComponent.GetInstance().GetBack();
+			ShowLeiloesComponent.GetInstance().GetBack("Leilão criado");
 		}
+			
 	}
 	private void Retroceder()
 	{
