--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/StartNegociationComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/StartNegociationComponent.razor
@@ -4,9 +4,13 @@
 @using FeirasEspinhoBlazorApp.Pages.PagesNegociation;
 @inject SistemaFeiras facade;
 
+
 <h2>Negociação</h2>
 <br />
-
+@if (erro != 0)
+{
+	<WarningComponent mensagem="@codigosErro[erro]" sucess="false" page="9" />
+}
 <div>
 	<div>
 		<label><b>Valor Total</b></label>
@@ -31,9 +35,22 @@
 	[Parameter, EditorRequired]
 	public int returnPage { get; set; }
 	private float valorapagar = 0;
+	private int erro = 0;
+	private Dictionary<int, string> codigosErro = new();
+	private static StartNegociationComponent component;
+	protected override void OnInitialized()
+	{
+		component = this;
+		codigosErro[1] = "Valor a negociar inválido.";
+	}
+
 	public void Confirmar()
 	{
-		if(returnPage == 0)
+		if(valorapagar <= 0)
+		{
+			erro = 1;
+		}
+		else if(returnPage == 0)
 		{
 			facade.AddNegociacaoVenda(venda, new Negociacao(0, venda.Preco, valorapagar, false, false));
 			ShowStandComponent showStandComponent = ShowStandComponent.GetInstance();
@@ -41,16 +58,25 @@
 		}
 		else
 		{
-			facade.RegistaNovoPreco((int) venda.Negociacao, valorapagar);
+			facade.RegistaNovoPreco(venda.Negociacao.Value, valorapagar);
 			ShowNegociacoesComponent.GetInstance().GetBack("Preço Registado");
 		}
 
+	}
+	public static StartNegociationComponent GetInstance()
+	{
+		return component;
 	}
 	public void Cancelar()
 	{
 		if (returnPage == 0)
 			ShowStandComponent.GetInstance().ShowStand(3);
 		else
-			ShowNegociacoesComponent.GetInstance().GetBack(0);
+			NegociationComponent.GetInstance().GetBack();
+	}
+	public void CleanWarning()
+	{
+		erro = 0;
+		StateHasChanged();
 	}
 }
