--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/WarningComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/WarningComponent.razor
@@ -5,25 +5,28 @@
 @using Pages.PagesLeilao;
 @using Pages.PagesNegociation;
 
-@if(sucess)
+@if(show)
 {
-	<div class="alert sucess">
-		<div class="d-table w-100">
-			<p class="d-table-cell w-100"><b>@mensagem</b></p>
-			<button class="buttonAlerta buttonSucess d-table-cell tar" @onclick="FechaAlerta">&times</button>
-		</div> 
-	</div>
-	<br />
-}
-else
-{
-	<div class="alert">
-		<div class="d-table w-100">
-			<p class="d-table-cell w-100"><b>@mensagem</b></p>
-			<button class="buttonAlerta d-table-cell tar" @onclick="FechaAlerta">&times</button>
+	@if (sucess)
+	{
+		<div class="alert sucess">
+			<div class="d-table w-100">
+				<p class="d-table-cell w-100"><b>@mensagem</b></p>
+				<button class="buttonAlerta buttonSucess d-table-cell tar" @onclick="FechaAlerta">&times</button>
+			</div> 
 		</div>
-	</div>
-	<br />
+		<br />
+	}
+	else
+	{
+		<div class="alert">
+			<div class="d-table w-100">
+				<p class="d-table-cell w-100"><b>@mensagem</b></p>
+				<button class="buttonAlerta d-table-cell tar" @onclick="FechaAlerta">&times</button>
+			</div>
+		</div>
+		<br />
+	}
 }
 
 @code
@@ -34,14 +37,14 @@ else
 	public bool sucess { get; set; }
 	[Parameter, EditorRequired]
 	public int page { get; set; }
-
+	private bool show = true;
 	public void FechaAlerta()
 	{
 		switch (page)
 		{
 			case 1:
 				// Login Page
-				LoginComponent.GetInstace().CleanWarning();
+				show = false;
 				break;
 			case 2:
 				// Create ACC Page
